--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -1,7 +1,7 @@
 .jumbotron{
   margin:80px;
   border-radius:10px;
-    background-image: url(./img/icslogo.png);
+    background-image: url(https://incisive-project.eu/wp-content/uploads/2021/02/newlogo.png);
 background-repeat: no-repeat;
 background-attachment: fixed;
 color:white !important;
